--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-dash
-dash-bootstrap-components
-dash-iconify
-pandas
-openpyxl
-gunicorn
+dash==2.17.1
+dash-bootstrap-components==1.6.0
+dash-extensions==1.0.14
+plotly==5.24.1
+pandas==2.2.2
+openpyxl==3.1.5
+gunicorn==22.0.0
