--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-dash==2.17.1
+dash==2.17.0
 dash-bootstrap-components==1.6.0
-dash-extensions==1.0.14
 plotly==5.24.1
 pandas==2.2.2
-openpyxl==3.1.5
-gunicorn==22.0.0
+bottleneck>=1.3.6
+gunicorn==21.2.0
