--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dash==2.17.0
 dash-bootstrap-components==1.6.0
-plotly==5.24.1
+dash-extensions==1.0.14
 pandas==2.2.2
-bottleneck>=1.3.6
+plotly==5.24.1
 gunicorn==21.2.0
+openpyxl==3.1.2
